make sure it fits on smaller screens

--- a/src/routes/Versions/components/Versions.scss
+++ b/src/routes/Versions/components/Versions.scss
@@ -9,13 +9,13 @@
 .left {
   position: fixed;
   top: 300px;
-  left: 3vw;
+  left: 2vw;
 }
 
 .right {
   position: fixed;
   top: 300px;
-  right: 3vw;
+  right: 1vw;
 }
 
 .diffPanel {
@@ -24,7 +24,7 @@
     margin-top: 0;
   }
   padding: 20px 40px;
-  max-width: 700px;
+  max-width: 650px;
   background: white;
   border-radius: 10px;
 }
